Changed baseimage to nginx:alpine for a smaller size

--- a/webtest/Dockerfile
+++ b/webtest/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:latest
+FROM nginx:alpine
 
 # Use /etc/hostname as index.html so you can distinguish the servers
 RUN rm /usr/share/nginx/html/index.html \
