Carryover commit (too lazy for branching)

--- a/foswiki/Dockerfile
+++ b/foswiki/Dockerfile
@@ -2,4 +2,7 @@ FROM nginx:alpine
 
 MAINTAINER Till Wiese <mail-github.com@till-wiese.de>
 
-RUN apk add --no-cache diffutils grep perl-fcgi perl-fcgi-procmanager
+RUN apk add --no-cache diffutils grep perl-fcgi \
+  perl-fcgi-procmanager ca-certificates \
+  && wget -O /tmp/latest.tar.gz \
+  https://sourceforge.net/projects/foswiki/files/latest/download
