--- a/mariadb-galera/Dockerfile.wip
+++ b/mariadb-galera/Dockerfile.wip
@@ -1,8 +1,4 @@
-FROM ubuntu:latest
+FROM mariadb:latest
 
-RUN apt-get update \
-  && apt-get install -y software-properties-common \
-  && apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8 \
-  && add-apt-repository 'deb [arch=amd64,i386] http://mirror.netcologne.de/mariadb/repo/10.1/ubuntu xenial main' \
-  && apt-get update \
-  && LC_ALL=C DEBIAN_FRONTEND=noninteractive apt-get install -y mariadb-server
+COPY ["wait4mysql.sh", "/usr/local/bin/"]
+ENTRYPOINT ["/usr/local/bin/wait4mysql.sh"]
