Move memcached-cluster to _composefiles, not Rancher integrated yet

--- a/_composefiles/memcached-cluster/docker-compose.yml
+++ b/_composefiles/memcached-cluster/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     extends: memcached1
     container_name: memcached-node2
   mcrouter:
-    image: mcrouter
+    image: m3adow/mcrouter:latest
     depends_on:
       - memcached1
       - memcached2
