Added ENTRYPOINTs for dumb-init_gosu base images

--- a/alpine_dumb-init_gosu/Dockerfile
+++ b/alpine_dumb-init_gosu/Dockerfile
@@ -30,3 +30,5 @@ RUN cd /usr/local/bin \
   && chmod +x gosu \
   && rm -f sha256sum \
   && apk --no-cache --purge del curl
+
+ENTRYPOINT ["/usr/local/bin/dumb-init"]
