Now using dumb-init and doing some process checking. First "Beta version".
* dumb init is used as an entrypoint
* seafile-entrypoint.sh now automatically tries to set Seafile up with
  Sqlite (for now) when being started first and not able to start Seafile

--- a/seafile/Dockerfile
+++ b/seafile/Dockerfile
@@ -4,9 +4,12 @@ MAINTAINER Till Wiese <mail-github.com@till-wiese.de>
 RUN DEBIAN_FRONTEND=noninteractive apt-get update \
   && apt-get install -y python2.7 libpython2.7 python-mysqldb \
       python-setuptools python-imaging python-ldap sqlite3 \
-      python-memcache curl
+      python-memcache curl vim \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN mkdir -p /opt/haiwen \
+
+RUN useradd -b /seafile -M -s /bin/bash -c "Seafile User" seafile \
+  && mkdir -p /opt/haiwen \
   && curl -sL $(curl -sL https://www.seafile.com/en/download/ \
     | grep -oE 'https://.*seafile-server.*x86-64.tar.gz'|sort -r|head -1) \
     | tar -C /opt/haiwen/ -xz \
@@ -16,7 +19,10 @@ RUN mkdir -p /opt/haiwen \
   && ln -s /seafile/seafile-data /opt/haiwen/seafile-data \
   && ln -s /seafile/seahub-data /opt/haiwen/seahub-data \
   && ln -s /opt/haiwen/$(ls -1 /opt/haiwen/ \
-    | grep -E '^seafile-server-[0-9.-]+') /opt/haiwen/seafile-server-latest
+    | grep -E '^seafile-server-[0-9.-]+') /opt/haiwen/seafile-server-latest \
+  && chown -R seafile:seafile /seafile /opt/haiwen
+
+USER seafile
 
 COPY ["seafile-entrypoint.sh", "/usr/local/bin/"]
 
