--- a/seafile/envfile.example
+++ b/seafile/envfile.example
@@ -2,3 +2,10 @@ SEAFILE_NAME=Seafile
 SEAFILE_ADDRESS=seafile.local
 SEAFILE_ADMIN=admin@adminswerk.de
 SEAFILE_ADMIN_PW=LoremIpsum
+
+MYSQL_SERVER=172.17.0.1
+MYSQL_USER=seafile
+MYSQL_USER_PASSWORD=qweasd
+MYSQL_USER_HOST=%
+MYSQL_ROOT_PASSWORD=12345
+
