--- a/_rancherfiles/seafile-failover_wip/docker-compose.yml
+++ b/_rancherfiles/seafile-failover_wip/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '2'
-services:
-  seafile:
-    name: seafile
-    image: jenserat/seafile
+seafile:
+  name: seafile
+  image: m3adow/seafile
+  volumes:
+  - cloud-data:/seafile
+  volume_driver: convoy-gluster
 
