Messed up something, I think I fixed it.

--- a/_rancherfiles/seafile-failover/docker-compose.yml
+++ b/_rancherfiles/seafile-failover/docker-compose.yml
@@ -1,7 +1,12 @@
 seafile:
-  name: seafile
   image: m3adow/seafile
+  env_file:
+  - ./secrets.env
   volumes:
   - cloud-data:/seafile
   volume_driver: convoy-gluster
+  external_links:
+  - 'galera/galera-lb:mysql'
+  labels:
+    io.rancher.container.hostname_override: container_name
 
