envfile.example not using MYSQL by default (commented)

--- a/seafile/envfile.example
+++ b/seafile/envfile.example
@@ -3,9 +3,10 @@ SEAFILE_ADDRESS=seafile.local
 SEAFILE_ADMIN=mail-github.com@adminswerk.de
 SEAFILE_ADMIN_PW=LoremIpsum
 
-MYSQL_SERVER=172.17.0.2
-MYSQL_USER=seafile
-MYSQL_USER_PASSWORD=qweasd
-MYSQL_USER_HOST=%
-MYSQL_ROOT_PASSWORD=12345
+# Use this for MySQL/MariaDB backend
+#MYSQL_SERVER=172.17.0.2
+#MYSQL_USER=seafile
+#MYSQL_USER_PASSWORD=qweasd
+#MYSQL_USER_HOST=%
+#MYSQL_ROOT_PASSWORD=12345
 
