--- a/_rancherfiles/seafile-failover/docker-compose.yml
+++ b/_rancherfiles/seafile-failover/docker-compose.yml
@@ -9,3 +9,4 @@ seafile:
   - 'galera/galera-lb:mysql'
   labels:
     io.rancher.container.hostname_override: container_name
+    io.rancher.container.pull_image: always
