--- a/_rancherfiles/seafile-failover/docker-compose.yml
+++ b/_rancherfiles/seafile-failover/docker-compose.yml
@@ -10,3 +10,26 @@ seafile:
   labels:
     io.rancher.container.hostname_override: container_name
     io.rancher.container.pull_image: always
+    #io.rancher.sidekicks: setup-seafile
+
+#setup-seafile:
+#  extends: 
+#    service: seafile
+#  command: setup_only
+#  labels:
+#    io.rancher.container.start_once: true
+
+debugger:
+  image: m3adow/nettools
+  env_file:
+  - ./secrets.env
+  volumes:
+    - cloud-data:/seafile
+  volume_driver: convoy-gluster
+  external_links:
+  - 'galera/galera-lb:mysql-server'
+  labels:
+    io.rancher.container.hostname_override: container_name
+    io.rancher.container.pull_image: always
+  tty: true
+  stdin_open: true
