--- a/_rancherfiles/seafile/docker-compose.yml
+++ b/_rancherfiles/seafile/docker-compose.yml
@@ -1,9 +1,18 @@
+seafile:
+  image: m3adow/seafile:dev
+  env_file:
+  - ./secrets.env
+  labels:
+    io.rancher.sidekicks: seafile-setup, debugger
+    io.rancher.container.pull_image: always
+  volumes_from:
+  - seafile-setup
+  command: run_only
+
 seafile-setup:
   image: m3adow/seafile:dev
   env_file:
   - ./secrets.env
-  external_links:
-  - 'galera/galera-lb:mysql-server'
   volumes:
   - /seafile
   labels: 
@@ -11,27 +20,18 @@ seafile-setup:
     io.rancher.container.start_once: true
   command: setup_only
 
-seafile:
-  image: m3adow/seafile:dev
+seafile-db:
+  image: mariadb:latest
   env_file:
   - ./secrets.env
-  external_links:
-  - 'galera/galera-lb:mysql-server'
   labels:
-    io.rancher.sidekicks: seafile-setup, debugger
     io.rancher.container.pull_image: always
-  volumes_from:
-  - seafile-setup
-  command: run_only
-  
 debugger:
   image: m3adow/nettools
   env_file:
   - ./secrets.env
   volumes_from:
   - seafile-setup
-  external_links:
-  - 'galera/galera-lb:mysql-server'
   labels:
     io.rancher.container.pull_image: always
   tty: true
