Added some libs for Dropbox/OneDrive

--- a/duply_duplicity/Dockerfile
+++ b/duply_duplicity/Dockerfile
@@ -1,6 +1,5 @@
 FROM alpine:latest
 MAINTAINER <mail-github.com@till-wiese.de>
 
-RUN apk --no-cache add duplicity duply
-
-ENTRYPOINT ["/usr/bin/duply"]
+RUN apk --no-cache add duplicity duply py-pip \
+    && pip install requests requests-oauthlib dropbox
