Added certs, grep and gawk

--- a/duply_duplicity/Dockerfile
+++ b/duply_duplicity/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:latest
-MAINTAINER <mail-github.com@till-wiese.de>
 
 RUN apk --no-cache add duplicity duply py-pip \
+      ca-certificates grep gawk \
     && pip install requests requests-oauthlib dropbox
+
+ENV GPG_TTY=/dev/console
