--- a/borg/Dockerfile
+++ b/borg/Dockerfile
@@ -11,4 +11,4 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
   && rm -rf /var/lib/apt/lists/* \
   && rm -rf /var/log/*
 
-ENTRYPOINT ["/usr/local/bin/borg"]
+ENTRYPOINT ["/usr/local/bin/borg-latest.sh"]
